style.css
@import url(http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700);

body {
    background-color: rgb(42,42,42);
    color: rgb(240,240,240);
    font-family: Ubuntu, Helvetica, sans-serif;
}

a {
    color: rgb(240,240,240);
    text-decoration: none;
}

#content {
    float: left;
    max-width: 600px;
}

#status {
    font-size: 10em;
    font-weight: bolder;
    margin-top: 9%;
    margin-left: 5%;
    float: left;
    max-width: 50%;
    display: block;
    margin: 100px;
    margin-bottom: 50px;
}


#further {
    margin-top: 40px;
    font-size: 30px;
}

#info {
    margin-bottom: 20px;
}

#aside {
    margin-right: 100px;
    float: right;
    margin-top: 100px;
}

#footer {
    margin-top: 50px;
}

.closed {
    color: rgb(224, 91, 94);
}

.open {
    color: rgb(134, 200, 128);
}





@media screen and (max-width: 1155px) {
    #status {
        font-size: 10em;
        max-width: 600px;
    }
}

@media screen and (max-width: 1044px) {
    #status {
        font-size: 7em;
        max-width: 400px;
    }
}

